--- a/app/src/main/res/layout/home_albums_row.xml
+++ b/app/src/main/res/layout/home_albums_row.xml
@@ -4,13 +4,19 @@
         <variable
             name="album"
             type="com.celerii.playio.mods.Album" />
+
+        <variable
+            name="clickHandler"
+            type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/constraint_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:onClick="@{(v)-> clickHandler.onClick(v)}">
 
         <LinearLayout
             android:id="@+id/album_art_clipper"
