--- a/app/src/main/res/layout/home_trending_row.xml
+++ b/app/src/main/res/layout/home_trending_row.xml
@@ -4,6 +4,10 @@
         <variable
             name="track"
             type="com.celerii.playio.mods.Track" />
+
+        <variable
+            name="clickHandler"
+            type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/profile_picture_background"
+            android:onClick="@{(v)-> clickHandler.onClick(v)}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +42,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
-            android:layout_marginBottom="@dimen/standard_top_margin"
+            android:layout_marginBottom="@dimen/home_trending_row_play_button_margin"
             android:contentDescription="@string/play_button"
             android:src="@drawable/ic_play_white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +56,7 @@
             android:maxLines="1"
             android:layout_marginStart="@dimen/home_trending_row_play_button_margin"
             android:layout_marginEnd="@dimen/home_trending_row_play_button_margin"
-            android:layout_marginBottom="@dimen/standard_top_margin"
+            android:layout_marginBottom="@dimen/home_trending_row_play_button_margin"
             android:text="@{track.artist_name}"
             android:textStyle="bold"
             android:textColor="@color/white"
