--- a/app/src/main/res/layout/track_row.xml
+++ b/app/src/main/res/layout/track_row.xml
@@ -1,78 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:id="@+id/track_art_clipper"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/home_artists_row_artist_picture_margin"
-        android:background="@drawable/profile_picture_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/track_and_artist_name_layout"
-        app:layout_constraintBottom_toBottomOf="parent" >
+    <data>
+        <variable
+            name="track"
+            type="com.celerii.playio.mods.Track" />
 
-        <ImageView
-            android:id="@+id/track_art"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/track_art"/>
+    </data>
 
-    </LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-
-    <LinearLayout
-        android:id="@+id/track_and_artist_name_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/track_art_clipper"
-        app:layout_constraintEnd_toStartOf="@id/track_duration"
-        app:layout_constraintBottom_toBottomOf="parent" >
-
-        <TextView
-            android:id="@+id/track_name"
+        <LinearLayout
+            android:id="@+id/track_art_clipper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:ellipsize="end"
-            android:maxLines="1" />
+            android:layout_margin="@dimen/standard_top_margin"
+            android:background="@drawable/profile_picture_background"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/track_and_artist_name_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:clipToOutline="@{true}">
+
+            <ImageView
+                android:id="@+id/track_art"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:contentDescription="@string/track_art"
+                app:image="@{track.image}"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/track_and_artist_name_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/track_art_clipper"
+            app:layout_constraintEnd_toStartOf="@id/track_duration"
+            app:layout_constraintBottom_toBottomOf="parent" >
+
+            <TextView
+                android:id="@+id/track_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:textStyle="bold"
+                android:text="@{track.name}"
+                style="@style/HeaderTextView" />
+
+            <TextView
+                android:id="@+id/artist_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="@{track.artist_name}"
+                style="@style/ViewMoreTextView" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/artist_name"
+            android:id="@+id/track_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start"
+            android:layout_marginEnd="@dimen/standard_top_margin"
+            android:layout_marginStart="@dimen/standard_top_margin"
+            android:gravity="center"
             android:ellipsize="end"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:text="@{com.celerii.playio.Utility.FormatDuration.formatDuration(track.duration)}"
+            style="@style/ViewMoreTextView"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/track_and_artist_name_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginStart="@dimen/separator_view_edge_margin"
+            android:layout_marginEnd="@dimen/separator_view_edge_margin"
+            android:background="?defaultColorSecondary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    <TextView
-        android:id="@+id/track_duration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/home_artists_row_artist_picture_margin"
-        android:layout_marginStart="@dimen/home_artists_row_artist_picture_margin"
-        android:gravity="center"
-        android:ellipsize="end"
-        android:maxLines="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/track_and_artist_name_layout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0.5dp"
-        android:layout_marginStart="@dimen/separator_view_edge_margin"
-        android:layout_marginEnd="@dimen/separator_view_edge_margin"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
