Implemented OnClickHandlerInterface for adapters

--- a/app/src/main/res/layout/album_row.xml
+++ b/app/src/main/res/layout/album_row.xml
@@ -7,11 +7,21 @@
         <variable
             name="album"
             type="com.celerii.playio.mods.Album" />
+
+        <variable
+            name="clickHandler"
+            type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
+
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{(v)->clickHandler.onClick(v, position)}">
 
         <LinearLayout
             android:id="@+id/album_art_clipper"
