--- a/app/src/main/res/layout/home_artists_row.xml
+++ b/app/src/main/res/layout/home_artists_row.xml
@@ -9,6 +9,10 @@
             name="clickHandler"
             type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
 
+        <variable
+            name="position"
+            type="Integer" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +21,7 @@
         android:id="@+id/constraint_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="@{(v)->clickHandler.onClick(v)}">
+        android:onClick="@{(v)->clickHandler.onClick(v, position)}">
 
         <LinearLayout
             android:id="@+id/artist_picture_clipper"
