--- a/app/src/main/res/layout/home_albums_row.xml
+++ b/app/src/main/res/layout/home_albums_row.xml
@@ -8,6 +8,10 @@
         <variable
             name="clickHandler"
             type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
+
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,7 +20,7 @@
         android:id="@+id/constraint_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="@{(v)-> clickHandler.onClick(v)}">
+        android:onClick="@{(v)-> clickHandler.onClick(v, position)}">
 
         <LinearLayout
             android:id="@+id/album_art_clipper"
