--- a/app/src/main/res/layout/home_trending_row.xml
+++ b/app/src/main/res/layout/home_trending_row.xml
@@ -8,6 +8,10 @@
         <variable
             name="clickHandler"
             type="com.celerii.playio.interfaces.OnClickHandlerInterface" />
+
+        <variable
+            name="position"
+            type="Integer" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/profile_picture_background"
-            android:onClick="@{(v)-> clickHandler.onClick(v)}"
+            android:onClick="@{(v)-> clickHandler.onClick(v, position)}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
