--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -29,9 +29,9 @@
         <item name="android:fontFamily">@font/airbnbcerealbook</item>
     </style>
 
-    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
-        <item name="android:textSize">@dimen/toolbar_text_size</item>
-    </style>
+<!--    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">-->
+<!--        <item name="android:textSize">@dimen/toolbar_text_size</item>-->
+<!--    </style>-->
 
     <style name="WelcomeTextView" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">?defaultTextColor</item>
