Added BindingAdapter methods for SmartPlayControls

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -86,7 +86,8 @@
                         android:id="@+id/track_art"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:contentDescription="@string/track_art" />
+                        android:contentDescription="@string/track_art"
+                        android:image="@{playControl.currentSongImageURL}"/>
 
                 </LinearLayout>
 
@@ -101,7 +102,7 @@
                     android:textColor="?defaultTextColor"
                     android:textStyle="bold"
                     android:textSize="18sp"
-                    android:text="Ice Prince - Oleku"/>
+                    android:text="@{playControl.currentSong}"/>
 
                 <ImageView
                     android:id="@+id/play_button"
@@ -117,7 +118,8 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="20dp"
-                    android:layout_gravity="center"/>
+                    android:layout_gravity="center"
+                    />
             </LinearLayout>
 
             <LinearLayout
