--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -5,6 +5,7 @@
     <attr name="defaultTextColor" format="reference|color" />
     <attr name="toolbar_color" format="reference|color" />
     <attr name="accent_color" format="reference|color" />
+    <attr name="fadedAccent" format="reference|color" />
     <attr name="separator_view_color" format="reference|color" />
     <attr name="picture_background_color" format="reference|color" />
 </resources>
